image size changed

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -93,8 +93,8 @@
     </div>
 
     <!-- View All Button (only show on home page) -->
-    <div class="view-all-section btn btn-primary" *ngIf="showViewAll">
-      <a routerLink="/products" class="view-all-btn">
+    <div class="view-all-section" *ngIf="showViewAll">
+      <a routerLink="/products" class="btn btn-primary">
         View All Products
         <i class="fas fa-arrow-right"></i>
       </a>
