--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -31,7 +31,7 @@
             <i class="fab fa-instagram"></i>
           </a>
           <a href="https://x.com/aurawaterpvt?t=iDRiKOPRbyEZzEr4TkiZQA&s=09" class="social-link twitter" aria-label="Twitter">
-            <i class="fab fa-twitter"></i>
+            <i class="fa-brands fa-x-twitter"></i>
           </a>
         </div>
       </div>
